2002-08-06  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* read.c (scm_input_error): new function: give meaningful error
	messages, and throw read-error

	* gc-malloc.c (scm_calloc): add scm_calloc.

2002-08-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* tags.h: remove GC bits documentation from the tags table. 

	* read.c (INPUT_ERROR): Prepare for file:line:column error
	messages for errors in scm_lreadr() and friends.

2002-08-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* gc-malloc.c (scm_malloc): use scm_realloc() (simplifies
	implementation). 
	(scm_gc_calloc): new function

2002-08-04  Han-Wen  <hanwen@cs.uu.nl>

	* ports.c (scm_new_port_table_entry): init port entry to 0
	completely.
	
	* ports.c (scm_new_port_table_entry): change function from
	scm_add_to_port_table. This prevents cells with null-pointers from
	being exposed to GC.

	* vports.c (s_scm_make_soft_port) strports.c (scm_mkstrport),
	fports.c (scm_fdes_to_port): Use scm_new_port_table_entry().

	* gc.c (s_scm_gc_stats): add cell-yield and malloc-yield statistic
	to gc-stats.

	* numbers.c (big2str): return "0" for 0 iso. ""

        * gc-segment.c, gc-malloc.c gc-mark.c, gc-freelist.c, gc-card.c,
	private-gc.h: new file

        * gc.c: completely revised and cleaned up the GC. It now uses lazy
        sweeping. More documentation in workbook/newgc.text

2002-07-25  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* random.c (rstate_free): Return zero.

2002-07-24  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* environments.c (remove_key_from_alist):  Removed.

	(obarray_remove):  Simplified.

2002-07-24  Stefan Jahn  <stefan@lkcc.org>

	* continuations.h: ia64: Include <signal.h> before 
	<sys/ucontext.h>.

2002-07-21  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* modules.c (scm_sym2var):  Don't compare SCM values with ==.

2002-07-21  Han-Wen  <hanwen@cs.uu.nl>

	* goops.c (scm_compute_applicable_methods): use
	scm_remember_upto_here_1 iso scm_remember_upto_here

	* macros.c: include deprecation.h
