@@ -1,3 +1,12 @@
+2002-08-08  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* gc.h: add scm_debug_cells_gc_interval to public interface
+
+	* gc-card.c ("sweep_card"): set scm_gc_running while sweeping.
+
+	* gc.c (scm_i_expensive_validation_check): separate expensive
+	validation checks from cheap ones.
+
 2002-08-06  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* read.c (scm_input_error): new function: give meaningful error
